날짜 시간 수정

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,11 +4,12 @@
 </head>
 <body>
     <div>
-        <h1><a href="">KHU's blog</a></h1>
+        <h1><a href="">TaeSoo's blog</a></h1>
     </div>
     
     <div>
-        <p>published: 19.05.2025, 19:35</p>
+        <p>published: 2025-05-19 20:01
+        </p>
         <h2><a href="">My first post</a></h2>
         <p>
             Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
