--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>KHU's blog</title>
+    <title>KHU's blogg</title>
 </head>
 <body>
     <div>
-        <h1><a href="">TaeSoo's blog</a></h1>
+        <h1><a href="">TaeSoo's blogg</a></h1>
     </div>
     
     <div>
