--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,59 @@
 <html>
 <head>
-    <title>KHU's blog</title>
+    <title>실습09</title>
 </head>
+
 <body>
-    <div>
-        <h1><a href="">TaeSoo's blog</a></h1>
-    </div>
-    
-    <div>
-        <p>published: 2025-05-19 20:01
-        </p>
-        <h2><a href="">My first post</a></h2>
-        <p>
-            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
-            tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-        </p>
-    </div>
+    <header>
+        <h1>자화상 - 윤동주</h1>
+    </header>
+
+    <hr size="10" width=100% noshade="noshade"></hr>
+
+    <section>
+        <h2 align="center">&lt; 자화상 &gt;</h2>
+        <h3 align="center">윤동주</h3>
+        <hr width=50%></hr>
+        <p/>
+        산모퉁이를 돌아 논가 외딴 우물을 홀로 찾아가선 가만히 들여다봅니다.
+        <p/>
+        우물 속에는 달이 밝고 구름이 흐르고 하늘이 펼치고 파아란 바람이 불고 가을이 있습니다.
+        <p/>
+        그리고 한 사나이가 있습니다.
+        <p/>
+        어쩐지 그 사나이가 미워져 돌아갑니다.
+        <p/>
+        돌아가다 생각하니 그 사나이가 가엾어집니다. 도로 가 들여다보니 사나이는 그대로 있습니다.
+        <p/>
+        다시 그 사나이가 미워져 돌아갑니다.
+        <p/>
+        돌아가다 생각하니 그 사나이가 그리워집니다
+        <p/>
+        우물 속에는 달이 밝고 구름이 흐르고 하늘이 펼치고 파아란 바람이 불고 가을이 있고 추억처럼 사나이가 있습니다.
+        <p/>
+    </section>
+
+    <aside>
+        <h4 align="left">윤동주 시인의 다른 시</h4>
+        <ul>
+            <li>서시</li>
+            <li>자화상</li>
+            <li>눈오는 지도도</li>
+            <li>새로운 길길</li>
+            <li>길길</li>
+            <li>별 헤는 밤</li>
+            <li>쉽게 씌어진 시</li>
+            <li>참회록</li>
+            <li>못 자는 밤</li>
+            <li>비오는 밤</li>
+            <li>소낙비</li>
+        </ul>
+    </aside>
+
+    <footer>
+        <hr width=100%></hr>
+        <small>모바일/웹서비스프로그래밍 2025</small>
+    </footer>
+
 </body>
 </html>
