--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -27,7 +27,7 @@
         <p/>
         다시 그 사나이가 미워져 돌아갑니다.
         <p/>
-        돌아가다 생각하니 그 사나이가 그리워집니다
+        돌아가다 생각하니 그 사나이가 그리워집니다.
         <p/>
         우물 속에는 달이 밝고 구름이 흐르고 하늘이 펼치고 파아란 바람이 불고 가을이 있고 추억처럼 사나이가 있습니다.
         <p/>
