--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>실습09</title>
 </head>
@@ -38,9 +39,9 @@
         <ul>
             <li>서시</li>
             <li>자화상</li>
-            <li>눈오는 지도도</li>
-            <li>새로운 길길</li>
-            <li>길길</li>
+            <li>눈 오는 지도</li>
+            <li>새로운 길</li>
+            <li>길</li>
             <li>별 헤는 밤</li>
             <li>쉽게 씌어진 시</li>
             <li>참회록</li>
@@ -56,4 +57,5 @@
     </footer>
 
 </body>
+
 </html>
